infra/conf/webapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: akingbee
  labels:
    app: akingbee
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: akingbee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akingbee
  labels:
    app: akingbee
spec:
  selector:
    matchLabels:
      app: akingbee
  template:
    metadata:
      labels:
        app: akingbee
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - image: yomain/akingbee:prod
        imagePullPolicy: Always
        name: akingbee
        ports:
        - containerPort: 8080
        command: ["uwsgi", "--ini", "./conf/uwsgi.ini"]
        volumeMounts:
          - mountPath: /app/log
            name: akingbee-log

      volumes:
      - name: akingbee-log
        emptyDir: {}
