infra/conf/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  tls:
  - hosts:
    - akingbee.com
    - www.akingbee.com
    secretName: akingbee.com-tls
  backend:
    serviceName: akingbee
    servicePort: 8080
